Validation des données

--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -21,7 +21,7 @@
     </div>
     <div class="container mt-4">
         <p>
-            <!-- nl2br est un filtre qui ajoute des sauts de ligne s'il y a des sauts de ligne dans le contenu -->
+            <!-- nl2br est un filtre qui ajoute des sauts de ligne s'il y en a dans le contenu -->
             {{ property.description | nl2br }}
         </p>
 
