--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,8 +22,21 @@
                         <a class="nav-link {% if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href=" {{path('property.index')}} ">Acheter</a>
                     </li>
                 </ul>
+                
+                    <ul class="navbar-nav">
+                        {% if app.user %}
+                        <li class="nav-item">
+                            <a href="{{ path('logout') }}" class="btn btn-outline-danger"><strong>Se déconnecter</strong></a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a href="{{ path('login') }}" class="btn btn-outline-success"><strong>Se connecter</strong></a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                
 
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Se connecter</button>
+                
             </div>
         </nav>
 
