Pagination et filtre des biens

--- a/templates/admin/property/edit.html.twig
+++ b/templates/admin/property/edit.html.twig
@@ -1,3 +1,7 @@
+{#  
+    ADMINISTRATION : EDITION D'UN BIEN ("/admin/property/id" = edit() de Admin/AdminPropertyController.php)
+#}
+
 {% extends "base.html.twig" %}
 
 {% block title 'Edition d\'un bien' %}
