--- a/templates/admin/property/new.html.twig
+++ b/templates/admin/property/new.html.twig
@@ -1,3 +1,7 @@
+{#  
+    ADMINISTRATION : CREATION D'UN BIEN ("/admin/property/create" = new() de Admin/AdminPropertyController.php)
+#}
+
 {% extends "base.html.twig" %}
 
 {% block title 'Création d\'un bien' %}
