--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -1,3 +1,7 @@
+{#  
+    VUE D'UN BIEN ("/bien/slug-du-bien-id" = show() de PropertyController.php)
+#}
+
 {% extends "base.html.twig" %}
 
 {% block title property.title %}
