--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,37 +1,44 @@
+{#  
+    VUE DE L'ENSEMBLE DES BIENS ("/biens" = index() de PropertyController.php)
+#}
+
 {% extends "base.html.twig" %}
 
-{% block title 'Themelio' %}
+{% block title 'Tous non biens' %}
 
 {% block body %}
-    <div class="jumbotron text-center">
-        <h1>Agence Themelio</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil mollitia tempora distinctio omnis. Omnis inventore ipsa expedita. Voluptates tempore quod magnam
-            sit sequi assumenda. Eveniet vero velit accusamus temporibus.
-        </p>
+    <div class="jumbotron">
+        <div class="container">
+            {{ form_start(form) }}
+            <div class="form-row align-items-end">
+                <div class="col">
+                    {{ form_row(form.minSurface) }}
+                </div>
+                <div class="col">
+                    {{ form_row(form.maxPrice) }}
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <button class="btn btn-primary">Rechercher</button>
+                    </div>                   
+                </div>
+            </div>
+            {{ form_end(form) }}
+        </div>
     </div>
     <div class="container">
-        <h2>Les derniers biens</h2>
+        <h2 class="text-center mb-4"><strong>Voir tous nos biens</strong></h2>
         <div class="row flex">
             {% for property in properties %}
                 <div class="col-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <!-- Lien vers -->
-                                <a href=" {{ path('property.show', {id: property.id, slug: property.slug}) }} ">
-                                    <!-- Revient à écrire property.getTitle() (c'est twig qui fait le lien entre le nom et la méthode) -->
-                                    {{ property.title }} 
-                                </a>
-                            </h5>
-                            <p class="card-text"> {{ property.city }} ({{ property.postalCode }}) </p>
-                            <div class="text-primary" style="font-weight: bold; font-size: 2rem;"> 
-                                {{ property.getFormatedPrice }} €
-                            </div>
-                        </div>
-                    </div>
+                    <!-- AFFICHAGE D'UN BIEN -->
+                    {% include('property/_property.html.twig') %}
                 </div>
             {% endfor %}
+        </div>
+        <!-- PAGINATION ("knp_pagination_render" permet le rendu de la pagination par la librairie, en param les biens paginés dans PropertyController, via index()) -->
+        <div class="pagination">
+            {{ knp_pagination_render(properties) }}
         </div>
     </div>
 
