--- a/templates/admin/property/new.html.twig
+++ b/templates/admin/property/new.html.twig
@@ -17,3 +17,10 @@
     </div>
 
 {% endblock %}
+
+
+{% block stylesheets %} {% endblock %}
+
+{% block javascripts %}
+    <!-- Javascript (cdn) champ SELECT (librairie cdnjs.com) qui se trouve dans 'base.html.twig -->
+{% endblock %}
