Gestion Image principale du bien et Upload

--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,7 +1,25 @@
-<!-- AFFICHAGE D'UN BIEN -->
+<!-- HTML POUR L'AFFICHAGE D'UN BIEN -->
 <div class="card">
+    <!-- IMAGE (si elle est présente) -->
+    {% if property.filename %}
+
+        {# Deux façons d'afficher l'image : 
+            1. la première classic (commentée), 
+            2. la seconde c'est la librairie d'upload de fichiers qui le permet (param 1 = l'entité ciblée, param 2 = le nom de la propriété de l'entité ciblée)
+        #}
+        <!--<img src="/images/properties/{{ property.filename }}" alt="card-img-top" style="width: 100%; height:auto"> -->
+        <img src="{{ vich_uploader_asset(property, 'imageFile') }}" class="card-img-top" style="width: 100%; height:auto">
+        
+    {% else %}
+        <!-- IMAGE PAR DEFAUT (si le bien ne posséde pas d'image), celle-ci doit être stockée -->
+        <img src="{{ '/images/properties/empty.jpg' }}" class="card-img-top" style="width: 100%; height:auto">
+
+    {% endif %}
+
     <div class="card-body">
+
         <h5 class="card-title text-center">
+
             <!-- Lien vers le bien cliqué -->
             <a href="{{ path('property.show', {id: property.id, slug: property.slug}) }}">
                 <!-- Revient à écrire property.getTitle() (c'est twig qui fait le lien entre le nom et la méthode) -->
