--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -11,7 +11,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                
+                    <!-- IMAGE (si elle est présente) -->
+                    {% if property.filename %}
+
+                        {# Deux façons d'afficher l'image : 
+                            1. la première classic (commentée), 
+                            2. la seconde c'est la librairie d'upload de fichiers qui le permet (param 1 = l'entité ciblée, param 2 = le nom de la propriété de l'entité ciblée)
+                        #}
+                        <!--<img src="/images/properties/{{ property.filename }}" alt="card-img-top" style="width: 100%; height:auto"> -->
+                        <img src="{{ vich_uploader_asset(property, 'imageFile') }}" class="card-img-top" style="width: 100%; height:auto">
+                        
+                    {% else %}
+                        <!-- IMAGE PAR DEFAUT (si le bien ne posséde pas d'image), celle-ci doit être stockée -->
+                        <img src="{{ '/images/properties/empty.jpg' }}" class="card-img-top" style="width: 100%; height:auto">
+
+                    {% endif %}
                 </div>
                 <div class="col-md-4">
                     <h1> {{ property.title }} </h1>
@@ -56,6 +70,11 @@
             </div>
             <div class="col-md-4">
                 <h2><strong>Spécificités</strong></h2>
+                <ul class="list-group">
+                    {% for option in property.options %}
+                        <li class="list-group-item">{{ option.name }}</li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
 
