--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -9,6 +9,21 @@
 {% block body %}
     <div class="jumbotron">
         <div class="container">
+
+            {# AFFICHAGE DES MESSAGES FLASH #}
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+
+            <!-- "form.vars" permet d'avoir accès aux informations de formulaire -->
+            {% if not form.vars.valid %}
+                <div class="alert alert-danger">
+                    Erreur dans le formulaire, veuillez corriger vos erreurs !
+                </div>
+            {% endif %} 
+
             <div class="row">
                 <div class="col-md-8">
                     <!-- IMAGE (si elle est présente) -->
@@ -32,6 +47,24 @@
                     <h2> {{ property.rooms }} pièces - {{ property.surface }} m2 </h2>
                     <div class="text-primary" style="font-size: 4em; font-weight: bold"> {{ property.formatedPrice }} </div>
                     <a href="" class="btn btn-primary">Contacter l'agence</a>
+
+                    <div id="contactForm" class="mt-4">
+                        {{ form_start(form)}}
+                        <div class="row">
+                            <div class="col">{{ form_row(form.firstname)}}</div>
+                            <div class="col">{{ form_row(form.lastname)}}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col">{{ form_row(form.phone)}}</div>
+                            <div class="col">{{ form_row(form.email)}}</div>
+                        </div>
+                        {{ form_rest(form)}}
+                        <div class="form-group">
+                            <button class="btn btn-primary">Envoyer</button>
+                        </div>
+                        {{ form_end(form)}}
+                    </div>
+
                 </div>
             </div>
         </div>
