--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        
+        <!-- STYLE CSS Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         
         <!-- Style CSS (cdn) champs SELECT (librairie cdnjs.com) -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/css/select2.min.css">
 
-        <!-- STYLE CSS (s'il y en a dans les fichiers) après css bootstrap -->
-        {% block stylesheets %}{% endblock %}
+        
+
+        {% block stylesheets %}
+            {# Charge les script Css du fichier assets/js/app.js (Webpack) #}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -46,19 +52,15 @@
 
         {% block body %}{% endblock %}
         
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <!-- SCRIPT (popper et bootstrap) en cdn (jquery est chargé de façon globale -->
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-        <!-- Javascript (cdn) champs SELECT (librairie cdnjs.com) -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
-        <script>
-            $('select').select2();
-        </script>
 
         <!-- SCRIPTS JAVASCRIPT (s'il y en a dans les fichiers 'inclus' ils seront ajoutés ici) après js bootstrap -->
         {% block javascripts %}
-            
+            {# Charge le js du fichier assets/js/app.js (Webpack) #}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </body>
 </html>
