--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -46,9 +46,13 @@
                     <h1> {{ property.title }} </h1>
                     <h2> {{ property.rooms }} pièces - {{ property.surface }} m2 </h2>
                     <div class="text-primary" style="font-size: 4em; font-weight: bold"> {{ property.formatedPrice }} </div>
-                    <a href="" class="btn btn-primary">Contacter l'agence</a>
 
-                    <div id="contactForm" class="mt-4">
+                    <!-- FORMULAIRE DE CONTACT -->
+                    <!-- Condition si le bouton "Contacter l'agence" est soummis on fait disparaitre le bouton, sinon on l'affiche-->
+                    <a href="" class="btn btn-primary" id="contactButton"{% if form.vars.submitted %} style="display: none";{% endif %}>Contacter l'agence</a>
+
+                    <!-- Condition si bouton "Contacter l'agence" n'est pas soummis on cache le formulaire, sinon on l'affiche-->
+                    <div id="contactForm" class="mt-4" {% if not form.vars.submitted %} style="display: none";{% endif %} >
                         {{ form_start(form)}}
                         <div class="row">
                             <div class="col">{{ form_row(form.firstname)}}</div>
