Remplacement de l'upload d'image pour un Upload d'images multiple, avec AJAX pour la suppression de l'image

--- a/templates/admin/option/_form.html.twig
+++ b/templates/admin/option/_form.html.twig
@@ -1,6 +1,6 @@
-{# Création de notre formulaire (nommé "form" dans les params de la méthode "edit()" de AdminPropertyController() #}
+{# Création de notre formulaire (nommé "form" dans les params de la méthode "edit()" de AdminOptionController() #}
 
-{# FORMULAIRE DE CREATION / EDITION D'UN BIEN #}
+{# FORMULAIRE DE CREATION / EDITION D'UNE OPTION #}
 {{ form_start(form) }}
     
     <div class="row">
